Fix issue with collapsed fieldset heights

--- a/css/tweaks.css
+++ b/css/tweaks.css
@@ -192,7 +192,7 @@ html.js fieldset.collapsed {
   border-bottom-width: 0px;
   border-left-width: 1px;
   border-right-width: 1px;
-  height: inherit;
+  height: auto;
 }
 
 #main-wrapper {
